packages/isar/test/errors/class/abstract.dart
// must not be abstract

import 'package:isar/isar.dart';

@collection
abstract class Model {
  Id? id;
}
